expose command/properties interface
